--- a/src/components/Register/RegisterPage.css
+++ b/src/components/Register/RegisterPage.css
@@ -138,3 +138,12 @@
 .btn-reg{
     background-color: #ffea00;
 }
+.back-button{
+    background-color: #000000;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
