--- a/src/styles.css
+++ b/src/styles.css
@@ -402,3 +402,23 @@ input:checked + .slider {
   font-weight: 500;
   text-align: center;
 }
+
+.review-list {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 18px 0;
+
+  display: flex;
+  flex-direction: column;
+}
+.rating-label {
+ border: none;
+  background: #ff0000;
+  color: white;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: bolder;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
